# solver2

./: Doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  solver.pro  solver.vcxproj  solver.vcxproj.filters
examples/: e2.txt  practice.txt
src/: Makefile.am  bitwisemask.cpp  bitwisemask.h  board.cpp  board.h  boardh.h  boardv.h  env.h  lookup.cpp  lookup.h  main.cpp  piece.h  piecevector.cpp  piecevector.h  placement.cpp  placement.h  solver.h  tile.cpp  tile.h  tilearraylookup.h  tilearraylookuparray.h  tilearraylookupmap.h  tilearraylookupvector.h
